# moss-tts-nano-cli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/moss_tts_nano_cli/: __init__.py  cache.py  cli.py  tts.py
tests/: test_cli.py
